--- a/clases.html
+++ b/clases.html
@@ -31,7 +31,7 @@
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html" class="header__check">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                        <li class="header__nav-item"><a href="galeria.html">Galería</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -42,11 +42,13 @@
                 <img src="img/image18.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Formación Artística</h2>
-                    <h4>Desarrolla tu talento de la mano de expertos. 
-                        En Academia LCA, ofrecemos clases diseñadas 
-                        para potenciar tus habilidades y creatividad.</h4>
                 </div>
             </section>
+            <div class="subtitle-container container">
+                <h3 class="subtitle">Desarrolla Tú Talento</h3>
+                <p>De la mano de expertos. En Academia LCA, ofrecemos clases diseñadas 
+                    para potenciar tus habilidades y creatividad.</p>
+            </div>
             <seccion class="clases">
                 <div class="clases__list">
                     <div class="clases__item" class="clases__item-img">
@@ -102,9 +104,23 @@
             </seccion>
         </main>
         <footer>
-            <div class="footer__derechos">
-                <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
+            <div class="footer__list">
+                <div class="footer__item">
+                    <h3 class="footer__info-title">Desarrolladores</h3>
+                    <ul class="footer__info-list">
+                        <li><p>Jesús D. Pérez B.</p></li>
+                        <li><p>Jhosber L. Gil B.</p></li>
+                        <li><p>Jhonny D. Dávila R.</p></li>
+                        <li><p>Jasneli E. Rodríguez H.</p></li>
+                        <li><p>Beritzon R. Colmenares T.</p></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="footer__item-icon-uptaeb">
+                    <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
