--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                        <li class="header__nav-item"><a href="galeria.html">Galería</a></li>
                         <li class="header__nav-item"><a href="contacto.html" class="header__check">Contacto</a></li>
                     </ul>
                 </nav>
@@ -96,68 +96,22 @@
                         <div class="contacto__item-info">
                             <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="contacto__item-icon-uptaeb">
                             <h4>Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                            <h4>Tutor: Lorelys Alvarado.</h4>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="contacto__faq container">
-                <h2 class="contacto__faq-title">Preguntas Frecuentes</h2>
-                <ul class="contacto__faq-list">
-                    <li class="contacto__faq-item">
-                        <input type="checkbox" id="p1">
-                        <label for="p1" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="contacto__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="contacto__faq-item">
-                        <input type="checkbox" id="p2">
-                        <label for="p2" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="contacto__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="contacto__faq-item">
-                        <input type="checkbox" id="p3">
-                        <label for="p3" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="contacto__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="contacto__faq-item">
-                        <input type="checkbox" id="p4">
-                        <label for="p4" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="contacto__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                    <li class="contacto__faq-item">
-                        <input type="checkbox" id="p5">
-                        <label for="p5" class="contacto__faq-item-title"><h3>¿Cuentan con talleres?</h3></label>
-                        <article class="contacto__faq-item-info">
-                            <p>Ofrecemos una variedad de servicios que incluyen consultoría, diseño web, desarrollo de software, etc.</p>
-                        </article>
-                    </li>
-                </ul>
             </section>
             <div class="download">
                 <button class="download-btn">
                     <a download="Planilla-LCA" href="download/planilla.pdf" class="download-link">
                         <img src="img/icon/download-to-inbox-svgrepo-com.svg" class="download-icon alt="">
                         <div class="download-info">
-                            <h2 class="download-title">Descargar Planilla de <br>Inscripción</h2>
+                            <h2 class="download-title">Descargar Planilla de Inscripción</h2>
                             <span class="download-span">Formato PDF (500 KB)</span>
                         </div>
                     </a>
                 </button>
             </div>
         </main>
-        <footer>
-            <div class="footer__derechos">
-                <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
