--- a/nosotros.html
+++ b/nosotros.html
@@ -31,7 +31,7 @@
                         <li class="header__nav-item"><a href="nosotros.html" class="header__check">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                        <li class="header__nav-item"><a href="galeria.html">Galería</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -78,6 +78,9 @@
                         <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
                     </li>
                     <li class="nosotros__mvv-item">
+                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
+                    </li>
+                    <li class="nosotros__mvv-item">
                         <h2>Misión</h2>
                         <p>Nuestra misión es ser un centro de formación artística integral que fomenta la creatividad, 
                         la disciplina y la pasión por las artes escénicas. Ofrecemos una educación de alta calidad en Danza, 
@@ -92,6 +95,9 @@
                         cultural que inspire a las futuras generaciones de artistas, formando individuos no solo talentosos, 
                         sino también disciplinados, seguros de sí mismos y con un profundo amor por el arte.</p>
                     </li>
+                    <li class="nosotros__mvv-item">
+                        <img src="img/image7.webp" class="nosotros__mvv-item-img" alt="">
+                    </li>
                 </ul>
             </section>
             <section class="nosotros__docentes">
@@ -99,22 +105,22 @@
                 <h2>Nuestro Equipo</h2></div>
                 <div class="nosotros__docentes-list">
                     <div class="nosotros__docentes-item">
-                        <h3>Juan Pérez</h3>
+                        <h3>Eduar Rincones</h3>
                         <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Teatro</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <h3>Luis Castro</h3>
+                        <h3>Genesis Niño</h3>
                         <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Actuación Y Cine</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <h3>Fernanda Gil</h3>
+                        <h3>Nelsymar Niño</h3>
                         <img src="img/image20.webp" class="nosotros__docentes-item-img">
-                        <h4>Dazna</h4>
+                        <h4>Danza</h4>
                     </div>
                     <div class="nosotros__docentes-item">
-                        <h3>María Lopéz</h3>
+                        <h3>Cristie Chirino</h3>
                         <img src="img/image20.webp" class="nosotros__docentes-item-img">
                         <h4>Gimnasia</h4>
                     </div>
@@ -122,9 +128,23 @@
             </section>
         </main>
         <footer>
-            <div class="footer__derechos">
-                <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
+            <div class="footer__list">
+                <div class="footer__item">
+                    <h3 class="footer__info-title">Desarrolladores</h3>
+                    <ul class="footer__info-list">
+                        <li><p>Jesús D. Pérez B.</p></li>
+                        <li><p>Jhosber L. Gil B.</p></li>
+                        <li><p>Jhonny D. Dávila R.</p></li>
+                        <li><p>Jasneli E. Rodríguez H.</p></li>
+                        <li><p>Beritzon R. Colmenares T.</p></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="footer__item-icon-uptaeb">
+                    <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
