--- a/programas.html
+++ b/programas.html
@@ -31,7 +31,7 @@
                         <li class="header__nav-item"><a href="nosotros.html">Nosotros</a></li>
                         <li class="header__nav-item"><a href="programas.html" class="header__check">Programas</a></li>
                         <li class="header__nav-item"><a href="clases.html">Clases</a></li>
-                        <li class="header__nav-item"><a href="actividades.html">Actividades</a></li>
+                        <li class="header__nav-item"><a href="galeria.html">Galería</a></li>
                         <li class="header__nav-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -42,9 +42,13 @@
                 <img src="img/image13.webp" class="hero-img" alt="">
                 <div class="hero-info container">
                     <h2>Programas Artísticos</h2>
-                    <h4>Nuestros programas estan diseñados para acompañar a cada estudiante en su viaje artístico, desde sus primeros pasos hasta alcanzar un nivel profecional.</h4>
                 </div>
             </section>
+            <div class="subtitle-container container">
+                <h3 class="subtitle">Nuestros Programas</h3>
+                <p>Estan diseñados para acompañar a cada estudiante en su viaje artístico, 
+                desde sus primeros pasos hasta alcanzar un nivel profecional.</p>
+            </div>
             <section class="programas">
                 <div class="programas-list container">
                     <article class="programas-item">
@@ -101,37 +105,30 @@
                     </article>
                 </div>
             </section>
-            <div class="programas__inscripcion">
-                <h2>Pasos para Inscribirse</h2>
-                <div class="programas__inscripcion-list container">
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/select-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
-                            <h4>Paso 1: Seleccione su programa</h4>
-                            <p>Explora nuestros programas y elige el que mejor se adapte a tus intereses y objetivos artísticos.</p>
-                        </div>
-                    </li>
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/document-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
-                            <h4>Paso 2: Requisitos</h4>
-                            <p>Revisa los requisitos de inscripción y rellena la planilla de inscripción.</p>
-                        </div>
-                    </li>
-                    <li class="programas__inscripcion-item">
-                        <img src="img/icon/phone-handset-svgrepo-com.svg" class="programas__inscripcion-item-img" alt="">
-                        <div class="programas__inscripcion-item-info">
-                            <h4>Paso 3: Contactar</h4>
-                            <p>Comunícate con nuestro equipo a través de nuestro para concluir la inscripción.</p>
-                        </div>
-                    </li>
+            <div class="n">
+                <div class="n-info container">
+                    <h3>Inscribete en nuestra Academia y subete al tren del talento <br>Más que una Academia somos una familia.</h3>
                 </div>
             </div>
         </main>
         <footer>
-            <div class="footer__derechos">
-                <div class="footer__derechos-container">
-                    <p class="footer__derechos-info">&copy; 2025 Todos los derechos reservados.</p>
+            <div class="footer__list">
+                <div class="footer__item">
+                    <h3 class="footer__info-title">Desarrolladores</h3>
+                    <ul class="footer__info-list">
+                        <li><p>Jesús D. Pérez B.</p></li>
+                        <li><p>Jhosber L. Gil B.</p></li>
+                        <li><p>Jhonny D. Dávila R.</p></li>
+                        <li><p>Jasneli E. Rodríguez H.</p></li>
+                        <li><p>Beritzon R. Colmenares T.</p></li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <img src="img/Logos/uptaeblogo.svg" alt="Cintillo de la UPTAEB" class="footer__item-icon-uptaeb">
+                    <h4 class="footer__info">Este sitio web fue desarrollado como un proyecto sociotecnologico por la UPTAEB.</h4>
+                </div>
+                <div class="footer__item">
+                    <h4 class="footer__info">&copy; 2025 Todos los derechos reservados.</h4>
                 </div>
             </div>
         </footer>
